# cardealer_ua

./: alembic.ini  pyproject.toml
config/: database.py
config/settings/: settings.py
src/: main.py
src/advertisements/: constants.py  models.py
src/core/: constants.py  models.py
src/migrations/: env.py
src/migrations/versions/: 0858619addb7_refactored_old_models_added_new_models.py  17c7aa35dbfb_db_refactoring.py  bb8d2509e68e_db_init.py
src/users/: constants.py  models.py
src/vehicle_subscriptions/: models.py
