[tool.poetry]
name = "CarDealer.ua"
version = "0.1.0"
description = ""
authors = ["Dmytro Podolynnyi"]
readme = "README.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
virtualenv = "20.25.3"
python = "^3.11"
fastapi = "^0.111.1"
fastapi-admin = "^1.0"
SQLAlchemy = "^2.0.31"
Markdown = "^3.3.6"
uWSGI = "^2.0.25.1"
psycopg2 = "^2.9.9"
pydantic = "^1.9.1"
uvicorn = "0.30.1"
gunicorn = "^20.1.0"
botocore = "^1.29.76"
boto3 = "^1.26.76"
celery = "^5.2.7"
flower = "^2.0.1"
redis = "^4.4.1"
requests = "^2.32.0"
alembic = "^1.13.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-mock = "^3.6.1"
pytest-cov = "^3.0.0"
pre-commit = "^2.16.0"
python-dotenv = "^0.20.0"
factory-boy = "^3.2.1"
psycopg2-binary = "^2.9.5"
faker = "18.3.4"
pytest-socket = "^0.6.0"
